--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                         </div>
                     </td>
                     <td>
-                        <!-- надо в виде таблицы добавить-->
+                    <video width="400" height="300" controls>
+                            <source src="nature_video.mp4" type="video/mp4" alt="ВИдео природа">
+                            Your browser does not support the video tag.
+                    </video>
                     </td>
                 </tr>
             </table>
