--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                         </div>
                     </td>
                     <td>
+                        <br>
+                        <h2>Видео</h2>
                     <video width="400" height="300" controls>
                             <source src="nature_video.mp4" type="video/mp4" alt="ВИдео природа">
                             Your browser does not support the video tag.
