--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section id="about">
             <h2>About Nature National Park</h2>
             <p>Explore the beauty of Nature National Park, where lush greenery and diverse wildlife come together to create an unforgettable experience.</p>
-            <img src="nature.jpg" alt="Nature National Park">
+            <img src="nature.jpg" width="400" height="300"  alt="Nature National Park">
             <br>
 
             <!-- Video with Controls and Alt Text -->
