--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Title -->
-    <title>Nature National Park</title>
+    <title>Burabai National Park</title>
 
     <!-- Link to External CSS -->
     <link rel="stylesheet" href="styles.css">
@@ -20,14 +20,14 @@
 
     <!-- Header Section -->
     <header>
-        <h1>Welcome to Nature National Park</h1>
+        <h1>Welcome to Burabai National Park</h1>
     </header>
 
     <!-- Navigation Section -->
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#about">About Burabai</a></li>
             <li><a href="#activities">Activities</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -46,6 +46,17 @@
                 <source src="nature_video.mp4" type="video/mp4" alt="ВИдео природа">
                 Your browser does not support the video tag.
             </video>
+            <h2>Visit Us in Burabai</h2>
+            <!-- Replace "YOUR_API_KEY" with your actual Google Maps API key if you have one -->
+            <iframe
+                width="100%"
+                height="300"
+                frameborder="0"
+                style="border:0"
+                src="https://maps.googleapis.com/maps/api/js?key=INSERT_YOUR_API_KEY&callback=initMap&v=weekly"
+                allowfullscreen
+            ></iframe>
+
         </section>
 
         <section id="activities">
