--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- Main Content Section -->
     <main>
         <section id="about">
-            <h2>About Nature National Park</h2>
-            <p>Explore the beauty of Nature National Park, where lush greenery and diverse wildlife come together to create an unforgettable experience.</p>
+            <h2>About Burabai National Park</h2>
+            <p>ТЕкст сюда</p>
             <img src="nature.jpg" width="350" height="250"  alt="Nature National Park">
             <br>
 
@@ -47,7 +47,6 @@
                 Your browser does not support the video tag.
             </video>
             <h2>Visit Us in Burabai</h2>
-            <!-- Replace "YOUR_API_KEY" with your actual Google Maps API key if you have one -->
             <iframe
                 width="100%"
                 height="300"
@@ -59,20 +58,20 @@
 
         </section>
 
-        <section id="activities">
+        <section id="заголовок">
             <h2>Activities</h2>
             <ul>
-                <li>Hiking Trails</li>
-                <li>Wildlife Safaris</li>
-                <li>Photography Tours</li>
-                <li>Stargazing Nights</li>
+                <li>текст1</li>
+                <li>текст2</li>
+                <li>текст3</li>
+                <li>текст4</li>
             </ul>
         </section>
     </main>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2023 Nature National Park. All rights reserved.</p>
+        <p>&copy; 2023 Burabai National Park. All rights reserved.</p>
     </footer>
 
 </body>
