--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         </section>
 
-        <section id="заголовок">
+        <section id="activities">
             <h2>Activities</h2>
             <ul>
                 <li>текст1</li>
