--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <section id="about">
             <h2>About Burabai National Park</h2>
             <p>ТЕкст сюда</p>
-            <img src="Burabai.jpg" width="350" height="250"  alt="Burabai National Park">
+            <img src="nature.jpg" width="350" height="250"  alt="Burabai National Park">
             <br>
 
             <!-- Video with Controls and Alt Text -->
             <video width="350" height="250" controls>
-                <source src="Burabai_video.mp4" type="video/mp4" alt="ВИдео природа">
+                <source src="nature_video.mp4" type="video/mp4" alt="ВИдео природа">
                 Your browser does not support the video tag.
             </video>
             <h2>Visit Us in Burabai</h2>
