--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
                 <li>текст4</li>
             </ul>
         </section>
+
+        <section id="contact">
+            <h2>Contacts</h2>
+
+            </ul>
+        </section>
     </main>
 
     <!-- Footer Section -->
