--- a/index.html
+++ b/index.html
@@ -64,3 +64,99 @@
     
 </body>
 </html>
+
+<!--body, h1, h2, p, ul {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Arial', sans-serif;
+    line-height: 1.6;
+    color: #555;
+    background-color: #f8f8f8;
+}
+
+header {
+    background-color: #3498db;
+    color: #fff;
+    padding: 1em;
+    text-align: center;
+}
+
+nav {
+    background-color: #2980b9;
+    color: #fff;
+    padding: 0.5em;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+
+nav a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+main {
+    padding: 2em;
+}
+
+section {
+    margin-bottom: 3em; /* Increased margin for better spacing */
+}
+
+footer {
+    background-color: #3498db;
+    color: #fff;
+    padding: 1em;
+    text-align: center;
+}
+
+.image-container {
+    margin-bottom: 2em; /* Increased margin for better spacing */
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 1em;
+    transition: transform 0.3s;
+}
+
+.image-container img:hover {
+    transform: scale(1.2);
+}
+
+.video-container {
+    position: relative;
+    max-width: 800px; /* Adjusted maximum width for better responsiveness */
+    margin: 0 auto;
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.video-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    pointer-events: none;
+    transition: opacity 0.3s;
+}
+
+.video-container video {
+    width: 100%;
+    height: auto;
+    display: block;
+    z-index: 2;
+}-->
